@@ -4,40 +4,70 @@ import static com.google.common.base.Preconditions.checkState;
 import static com.google.udmi.util.GeneralUtils.catchToElse;
 import static com.google.udmi.util.GeneralUtils.catchToNull;
 import static com.google.udmi.util.GeneralUtils.friendlyStackTrace;
-import static com.google.udmi.util.GeneralUtils.ifNotNullThen;
-import static java.lang.String.format;
 import static java.util.Optional.ofNullable;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.bos.udmi.service.pod.ContainerBase;
 import java.io.BufferedReader;
+import java.io.File;
 import java.util.Date;
+import java.util.HashMap;
+import java.util.Map;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.Future;
-import java.util.concurrent.TimeUnit;
 import java.util.function.Consumer;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import udmi.schema.EndpointConfiguration;
 
 /**
- * Provider that links directly to a mosquitto broker.
+ * Provider that links directly to a mosquitto broker using the native
+ * Mosquitto Dynamic Security plugin JSON API over MQTT.
  */
 public class MosquittoBroker extends ContainerBase implements ConnectionBroker {
 
-  private static final String UDMI_ROOT = System.getenv("UDMI_ROOT");
-  private static final String MOSQUCTL_CLIENT_FMT = UDMI_ROOT + "/bin/mosquctl_client %s %s";
-  private static final String MOSQUCTL_LOG_FMT = UDMI_ROOT + "/bin/mosquctl_log %s";
-  private static final String MOSQUCTL_GATEWAY_FMT = UDMI_ROOT + "/bin/mosquctl_gateway %s %s %s";
-  private static final long EXEC_TIMEOUT_SEC = 10;
   private static final String REVOKE_PASSWORD = "--";
+  private static final String DEFAULT_MOSQUITTO_LOG_PATH = "/var/log/mosquitto/mosquitto.log";
   private static final Pattern LOG_MATCHER =
       Pattern.compile("([0-9]+): (\\S+) (\\S+) (\\S+) (\\S+) (.*)");
   private static final Pattern PUBLISH_MATCHER =
       Pattern.compile("\\(([d01,qr ]+), m([0-9]+), '(\\S+)', .*\\)");
   private static final Pattern PUBACK_MATCHER = Pattern.compile("\\((m|Mid: )([0-9]+), \\S+\\)");
   private final ContainerBase container;
+  private final EndpointConfiguration endpointConfig;
+  private final boolean disableLogging;
+  private final Object tailLock = new Object();
+  private Process tailProcess;
 
-  public MosquittoBroker(ContainerBase container) {
+  private MosquittoDynamicSecurityService dynSecService;
+  private final ObjectMapper objectMapper = new ObjectMapper();
+
+  /**
+   * Create a new broker connection provider.
+   */
+  public MosquittoBroker(ContainerBase container, EndpointConfiguration endpointConfig) {
+    this(container, endpointConfig, false);
+  }
+
+  /**
+   * Create a new broker connection provider with logging controls.
+   */
+  public MosquittoBroker(ContainerBase container, EndpointConfiguration endpointConfig,
+      boolean disableLogging) {
     this.container = container;
+    this.endpointConfig = endpointConfig;
+    this.disableLogging = disableLogging;
+    if (!disableLogging) {
+      File logFile = new File(getMosquittoLogPath());
+      if (!logFile.canRead()) {
+        throw new RuntimeException(
+            "Mosquitto log file is not readable: " + logFile.getAbsolutePath());
+      }
+    }
+  }
+
+  private String getMosquittoLogPath() {
+    return ofNullable(System.getenv("MOSQUITTO_LOG_PATH")).orElse(DEFAULT_MOSQUITTO_LOG_PATH);
   }
 
   private void consumeLogs(String clientPrefix, Consumer<BrokerEvent> eventConsumer) {
@@ -61,38 +91,142 @@ public class MosquittoBroker extends ContainerBase implements ConnectionBroker {
     thread.start();
   }
 
-  private void executeCommand(String cmd) {
-    synchronized (MosquittoBroker.class) {
-      try {
-        info("Executing command %s", cmd);
-        Process exec = Runtime.getRuntime().exec(cmd);
-        exec.waitFor(EXEC_TIMEOUT_SEC, TimeUnit.SECONDS);
-        exec.errorReader().lines().forEach(container::info);
-        exec.inputReader().lines().forEach(container::info);
-        int exitValue = exec.exitValue();
-        checkState(exitValue == 0, "exit return code " + exitValue);
-      } catch (Exception e) {
-        throw new RuntimeException("While executing " + cmd, e);
-      }
+  private synchronized MosquittoDynamicSecurityService getDynSecService() {
+    if (dynSecService == null) {
+      dynSecService = new MosquittoDynamicSecurityService(endpointConfig);
+    }
+    return dynSecService;
+  }
+
+  private CompletableFuture<Void> enqueueCommand(String commandName, Map<String, Object> cmd,
+      String username, String password, String clientId, boolean isFallbackSupported) {
+    try {
+      byte[] bytes = objectMapper.writeValueAsBytes(cmd);
+      CompletableFuture<Void> future = new CompletableFuture<>();
+      return getDynSecService().enqueueCommand(new MosquittoDynamicSecurityService.CommandRequest(
+          commandName, bytes, future, username, password, clientId, isFallbackSupported));
+    } catch (Exception e) {
+      CompletableFuture<Void> future = new CompletableFuture<>();
+      future.completeExceptionally(e);
+      return future;
     }
   }
 
-  private void mosquctlClient(String clientId, String clientPass) {
-    executeCommand(format(MOSQUCTL_CLIENT_FMT, clientId, clientPass));
+  private CompletableFuture<Void> mosquctlClient(String clientId, String clientPass) {
+    String clientUser = clientId;
+    String roleName = "role_" + clientId.replace("/", "_");
+
+    if ("--".equals(clientPass)) {
+      CompletableFuture<Void> f1 = deleteClient(clientUser);
+      CompletableFuture<Void> f2 = deleteRole(roleName);
+      return CompletableFuture.allOf(f1, f2)
+          .thenRun(() -> info("Device %s deleted correctly.", clientId));
+    } else {
+      CompletableFuture<Void> clientFuture = createClient(clientUser, clientPass, clientId);
+      CompletableFuture<Void> roleFuture = createRole(roleName);
+
+      return CompletableFuture.allOf(clientFuture, roleFuture).thenCompose(v -> {
+        CompletableFuture<Void> r1 = addClientRole(clientUser, roleName);
+        CompletableFuture<Void> a1 =
+            addRoleAcl(roleName, "subscribePattern", clientId + "/config", true);
+        CompletableFuture<Void> a2 =
+            addRoleAcl(roleName, "subscribePattern", clientId + "/commands", true);
+        CompletableFuture<Void> a3 =
+            addRoleAcl(roleName, "subscribePattern", clientId + "/errors", true);
+        CompletableFuture<Void> a4 =
+            addRoleAcl(roleName, "publishClientSend", clientId + "/events/#", true);
+        CompletableFuture<Void> a5 =
+            addRoleAcl(roleName, "publishClientSend", clientId + "/state", true);
+        return CompletableFuture.allOf(r1, a1, a2, a3, a4, a5);
+      }).thenRun(() -> info("Device %s registered correctly.", clientId));
+    }
+  }
+
+  private CompletableFuture<Void> setClientPassword(String clientUser, String clientPass) {
+    Map<String, Object> cmd = new HashMap<>();
+    cmd.put("command", "setClientPassword");
+    cmd.put("username", clientUser);
+    cmd.put("password", clientPass);
+    return enqueueCommand("setClientPassword", cmd, clientUser, clientPass, null, false);
+  }
+
+  private CompletableFuture<Void> addRoleAcl(
+      String roleName, String type, String pattern, boolean allow) {
+    Map<String, Object> cmd = new HashMap<>();
+    cmd.put("command", "addRoleACL");
+    cmd.put("rolename", roleName);
+    cmd.put("acltype", type);
+    cmd.put("topic", pattern);
+    cmd.put("allow", allow);
+    return enqueueCommand("addRoleACL", cmd, null, null, null, false);
+  }
+
+  private CompletableFuture<Void> deleteClient(String clientUser) {
+    Map<String, Object> cmd = new HashMap<>();
+    cmd.put("command", "deleteClient");
+    cmd.put("username", clientUser);
+    return enqueueCommand("deleteClient", cmd, clientUser, null, null, false);
+  }
+
+  private CompletableFuture<Void> deleteRole(String roleName) {
+    Map<String, Object> cmd = new HashMap<>();
+    cmd.put("command", "deleteRole");
+    cmd.put("rolename", roleName);
+    return enqueueCommand("deleteRole", cmd, null, null, null, false);
+  }
+
+  private CompletableFuture<Void> createClient(
+      String clientUser, String clientPass, String clientId) {
+    Map<String, Object> cmd = new HashMap<>();
+    cmd.put("command", "createClient");
+    cmd.put("username", clientUser);
+    cmd.put("password", clientPass);
+    if (clientId != null) {
+      cmd.put("clientid", clientId);
+    }
+    return enqueueCommand("createClient", cmd, clientUser, clientPass, clientId, true);
+  }
+
+  private CompletableFuture<Void> createRole(String roleName) {
+    Map<String, Object> cmd = new HashMap<>();
+    cmd.put("command", "createRole");
+    cmd.put("rolename", roleName);
+    return enqueueCommand("createRole", cmd, null, null, null, false);
+  }
+
+  private CompletableFuture<Void> addClientRole(String clientUser, String roleName) {
+    Map<String, Object> cmd = new HashMap<>();
+    cmd.put("command", "addClientRole");
+    cmd.put("username", clientUser);
+    cmd.put("rolename", roleName);
+    return enqueueCommand("addClientRole", cmd, clientUser, null, null, false);
   }
 
   private void mosquctlLog(String clientPrefix, Consumer<BrokerEvent> eventConsumer) {
-    String cmd = format(MOSQUCTL_LOG_FMT, clientPrefix);
-    synchronized (MosquittoBroker.class) {
+    if (disableLogging) {
+      info("Mosquitto logging disabled, skipping log consumer for prefix %s", clientPrefix);
+      return;
+    }
+    synchronized (tailLock) {
       try {
-        info("Starting log consumer %s", cmd);
-        Process exec = Runtime.getRuntime().exec(cmd);
+        info("Starting log consumer for prefix %s", clientPrefix);
+        ProcessBuilder pb = new ProcessBuilder("tail", "-f", getMosquittoLogPath());
+        if (tailProcess != null) {
+          tailProcess.destroy();
+        }
+        tailProcess = pb.start();
+        Process exec = tailProcess;
         consumeStream(exec.errorReader(), line -> warn("log error: " + line));
-        consumeStream(exec.inputReader(), line -> ifNotNullThen(parseLogLine(line), eventConsumer));
+        consumeStream(exec.inputReader(), line -> {
+          BrokerEvent event = parseLogLine(line);
+          if (event != null && event.clientId != null && event.clientId.startsWith(clientPrefix)) {
+            eventConsumer.accept(event);
+          }
+        });
       } catch (Exception e) {
-        throw new RuntimeException("While executing " + cmd, e);
+        throw new RuntimeException("While starting log consumer", e);
       } finally {
-        info("Completed log consumer");
+        info("Completed log consumer setup");
       }
     }
   }
@@ -149,18 +283,62 @@ public class MosquittoBroker extends ContainerBase implements ConnectionBroker {
   }
 
   @Override
-  public void authorize(String clientId, String password) {
-    mosquctlClient(clientId, ofNullable(password).orElse(REVOKE_PASSWORD));
+  public CompletableFuture<Void> authorize(String clientId, String password) {
+    return mosquctlClient(clientId, ofNullable(password).orElse(REVOKE_PASSWORD));
   }
 
   @Override
-  public void bindGateway(String gatewayId, String deviceId) {
-    executeCommand(format(MOSQUCTL_GATEWAY_FMT, "bind", gatewayId, deviceId));
+  public CompletableFuture<Void> bindGateway(String gatewayId, String deviceId) {
+    String roleName = "role_" + gatewayId.replace("/", "_");
+
+    // add ACLs
+    return CompletableFuture.allOf(
+        addRoleAcl(roleName, "subscribePattern", deviceId + "/config", true),
+        addRoleAcl(roleName, "subscribePattern", deviceId + "/commands", true),
+        addRoleAcl(roleName, "subscribePattern", deviceId + "/errors", true),
+        addRoleAcl(roleName, "publishClientSend", deviceId + "/events/#", true),
+        addRoleAcl(roleName, "publishClientSend", deviceId + "/state", true),
+        addRoleAcl(roleName, "publishClientSend", deviceId + "/attach", true)
+    );
   }
 
   @Override
-  public void unbindGateway(String gatewayId, String deviceId) {
-    info("Unbind device Id: %s from gateway Id: %s :%s", deviceId, gatewayId);
-    executeCommand(format(MOSQUCTL_GATEWAY_FMT, "unbind", gatewayId, deviceId));
+  public CompletableFuture<Void> unbindGateway(String gatewayId, String deviceId) {
+    info("Unbind device Id: %s from gateway Id: %s", deviceId, gatewayId);
+    String roleName = "role_" + gatewayId.replace("/", "_");
+
+    return CompletableFuture.allOf(
+        removeRoleAcl(roleName, "subscribePattern", deviceId + "/config"),
+        removeRoleAcl(roleName, "subscribePattern", deviceId + "/commands"),
+        removeRoleAcl(roleName, "subscribePattern", deviceId + "/errors"),
+        removeRoleAcl(roleName, "publishClientSend", deviceId + "/events/#"),
+        removeRoleAcl(roleName, "publishClientSend", deviceId + "/state"),
+        removeRoleAcl(roleName, "publishClientSend", deviceId + "/attach")
+    );
+  }
+
+  private CompletableFuture<Void> removeRoleAcl(String roleName, String type, String pattern) {
+    Map<String, Object> cmd = new HashMap<>();
+    cmd.put("command", "removeRoleACL");
+    cmd.put("rolename", roleName);
+    cmd.put("acltype", type);
+    cmd.put("topic", pattern);
+    return enqueueCommand("removeRoleACL", cmd, null, null, null, false);
+  }
+
+  @Override
+  public void shutdown() {
+    synchronized (tailLock) {
+      if (tailProcess != null) {
+        tailProcess.destroy();
+        tailProcess = null;
+      }
+    }
+    synchronized (this) {
+      if (dynSecService != null) {
+        dynSecService.shutdown();
+      }
+    }
+    super.shutdown();
   }
 }
